src/syntax/reader/snapshots/lust__syntax__reader__read__tests__read_advanced.snap
---
source: src/syntax/reader/read.rs
expression: root.unwrap()
---
Root @ 0..159
  Pair @ 1..155
    head:
      Atom @ 1..6
        Symbol("macro")
    tail:
      Pair @ 8..155
        head:
          Pair @ 8..28
            head:
              Atom @ 8..16
                Symbol("for-each")
            tail:
              Pair @ 17..28
                head:
                  Atom @ 17..18
                    Symbol("x")
                tail:
                  Pair @ 19..28
                    head:
                      Atom @ 19..21
                        Symbol("in")
                    tail:
                      Atom @ 24..28
                        Symbol("body")
        tail:
          Pair @ 39..155
            head:
              Pair @ 39..155
                head:
                  Atom @ 39..40
                    Symbol("quasiquote")
                tail:
                  Pair @ 41..155
                    head:
                      Pair @ 41..155
                        head:
                          Atom @ 41..45
                            Symbol("loop")
                        tail:
                          Pair @ 47..155
                            head:
                              Pair @ 47..55
                                head:
                                  Atom @ 47..50
                                    Symbol("let")
                                tail:
                                  Pair @ 51..55
                                    head:
                                      Atom @ 51..52
                                        Symbol("x")
                                    tail:
                                      Pair @ 53..55
                                        head:
                                          Atom @ 53..55
                                            Symbol("in")
                                        tail:
                                          Nil
                            tail:
                              Pair @ 70..155
                                head:
                                  Pair @ 70..155
                                    head:
                                      Atom @ 70..72
                                        Symbol("if")
                                    tail:
                                      Pair @ 74..155
                                        head:
                                          Pair @ 74..87
                                            head:
                                              Atom @ 74..77
                                                Symbol("not")
                                            tail:
                                              Pair @ 79..87
                                                head:
                                                  Pair @ 79..87
                                                    head:
                                                      Atom @ 79..85
                                                        Symbol("empty?")
                                                    tail:
                                                      Pair @ 86..87
                                                        head:
                                                          Atom @ 86..87
                                                            Symbol("x")
                                                        tail:
                                                          Nil
                                                tail:
                                                  Nil
                                        tail:
                                          Pair @ 107..155
                                            head:
                                              Pair @ 107..120
                                                head:
                                                  Atom @ 107..112
                                                    Symbol("begin")
                                                tail:
                                                  Pair @ 115..120
                                                    head:
                                                      Atom @ 115..116
                                                        Symbol("unquote")
                                                    tail:
                                                      Pair @ 116..120
                                                        head:
                                                          Atom @ 116..120
                                                            Symbol("body")
                                                        tail:
                                                          Nil
                                            tail:
                                              Pair @ 139..155
                                                head:
                                                  Pair @ 139..155
                                                    head:
                                                      Atom @ 139..147
                                                        Symbol("for-each")
                                                    tail:
                                                      Pair @ 150..155
                                                        head:
                                                          Atom @ 150..151
                                                            Symbol("unquote")
                                                        tail:
                                                          Pair @ 151..155
                                                            head:
                                                              Atom @ 151..155
                                                                Symbol("body")
                                                            tail:
                                                              Nil
                                                tail:
                                                  Nil
                                tail:
                                  Nil
                    tail:
                      Nil
            tail:
              Nil
