src/syntax/reader/snapshots/lust__syntax__reader__read__tests__read_dot.snap
---
source: src/syntax/reader/read.rs
expression: root.unwrap()
---
Root @ 0..7
  Pair @ 1..6
    Atom @ 1..2
      Number(1)
    Atom @ 5..6
      Number(2)

