src/syntax/reader/snapshots/lust__syntax__reader__read__tests__read_int.snap
---
source: src/syntax/reader/read.rs
expression: root.unwrap()
---
Root @ 0..2
  Atom @ 0..2
    Number(42)

