src/syntax/reader/snapshots/lust__syntax__reader__read__tests__read_list_dot.snap
---
source: src/syntax/reader/read.rs
expression: root.unwrap()
---
Root @ 0..9
  Pair @ 1..8
    Atom @ 1..2
      Number(1),
    Atom @ 3..4
      Number(2),
    Atom @ 7..8
      Number(3)
