src/syntax/reader/snapshots/lust__syntax__reader__read__tests__read_quasi_unquote.snap
---
source: src/syntax/reader/read.rs
expression: root.unwrap()
---
Root @ 0..15
  List @ 0..15
    Atom @ 0..1
      Symbol("quasiquote") @ 0..1,
    List @ 1..15
      Atom @ 2..3
        Number(1) @ 2..3,
      List @ 4..12
        Atom @ 4..5
          Symbol("unquote") @ 4..5,
        List @ 5..12
          Atom @ 6..7
            Symbol("+") @ 6..7,
          Atom @ 8..9
            Number(1) @ 8..9,
          Atom @ 10..11
            Number(1) @ 10..11,
      Atom @ 13..14
        Number(3) @ 13..14
