src/syntax/reader/snapshots/lust__syntax__reader__read__tests__read_quasiquote.snap
---
source: src/syntax/reader/read.rs
expression: root.unwrap()
---
Root @ 0..8
  List @ 0..7
    Atom @ 0..1
      Symbol("quasiquote")
    List @ 2..7
      Atom @ 2..3
        Number(1)
      Atom @ 4..5
        Number(2)
      Atom @ 6..7
        Number(3)

